tools/vz/pkg/internal/test/cluster/problem-pods-install/cluster-snapshot/verrazzano-ingress-nginx/ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b8tmd5m/logs.txt
# Copyright (c) 2023, 2024, Oracle and/or its affiliates.
# Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl.

==== START logs for container istio-init of pod ingress-nginx/ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b8tmd5m ====
2022-06-16T10:20:30.977179Z	info	Istio iptables environment:
ENVOY_PORT=
INBOUND_CAPTURE_PORT=
ISTIO_INBOUND_INTERCEPTION_MODE=
ISTIO_INBOUND_TPROXY_ROUTE_TABLE=
ISTIO_INBOUND_PORTS=
ISTIO_OUTBOUND_PORTS=
ISTIO_LOCAL_EXCLUDE_PORTS=
ISTIO_EXCLUDE_INTERFACES=
ISTIO_SERVICE_CIDR=
ISTIO_SERVICE_EXCLUDE_CIDR=
ISTIO_META_DNS_CAPTURE=
INVALID_DROP=

2022-06-16T10:20:30.977293Z	info	Istio iptables variables:
PROXY_PORT=15001
PROXY_INBOUND_CAPTURE_PORT=15006
PROXY_TUNNEL_PORT=15008
PROXY_UID=1337
PROXY_GID=1337
INBOUND_INTERCEPTION_MODE=REDIRECT
INBOUND_TPROXY_MARK=1337
INBOUND_TPROXY_ROUTE_TABLE=133
INBOUND_PORTS_INCLUDE=*
INBOUND_PORTS_EXCLUDE=15090,15021,8080,15020
OUTBOUND_IP_RANGES_INCLUDE=*
OUTBOUND_IP_RANGES_EXCLUDE=
OUTBOUND_PORTS_INCLUDE=
OUTBOUND_PORTS_EXCLUDE=
KUBE_VIRT_INTERFACES=
ENABLE_INBOUND_IPV6=false
DNS_CAPTURE=false
DROP_INVALID=false
CAPTURE_ALL_DNS=false
DNS_SERVERS=[],[]
OUTPUT_PATH=
NETWORK_NAMESPACE=
CNI_MODE=false
EXCLUDE_INTERFACES=

2022-06-16T10:20:30.977539Z	info	Writing following contents to rules file: /tmp/iptables-rules-1655374830977350058.txt3695617169
* nat
-N ISTIO_INBOUND
-N ISTIO_REDIRECT
-N ISTIO_IN_REDIRECT
-N ISTIO_OUTPUT
-A ISTIO_INBOUND -p tcp --dport 15008 -j RETURN
-A ISTIO_REDIRECT -p tcp -j REDIRECT --to-ports 15001
-A ISTIO_IN_REDIRECT -p tcp -j REDIRECT --to-ports 15006
-A PREROUTING -p tcp -j ISTIO_INBOUND
-A ISTIO_INBOUND -p tcp --dport 15090 -j RETURN
-A ISTIO_INBOUND -p tcp --dport 15021 -j RETURN
-A ISTIO_INBOUND -p tcp --dport 8080 -j RETURN
-A ISTIO_INBOUND -p tcp --dport 15020 -j RETURN
-A ISTIO_INBOUND -p tcp -j ISTIO_IN_REDIRECT
-A OUTPUT -p tcp -j ISTIO_OUTPUT
-A ISTIO_OUTPUT -o lo -s REDACTED-IP4-ADDRESS/32 -j RETURN
-A ISTIO_OUTPUT -o lo ! -d REDACTED-IP4-ADDRESS/32 -m owner --uid-owner 1337 -j ISTIO_IN_REDIRECT
-A ISTIO_OUTPUT -o lo -m owner ! --uid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -m owner --uid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -o lo ! -d REDACTED-IP4-ADDRESS/32 -m owner --gid-owner 1337 -j ISTIO_IN_REDIRECT
-A ISTIO_OUTPUT -o lo -m owner ! --gid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -m owner --gid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -d REDACTED-IP4-ADDRESS/32 -j RETURN
-A ISTIO_OUTPUT -j ISTIO_REDIRECT
COMMIT
2022-06-16T10:20:30.977586Z	info	Running command: iptables-restore --noflush /tmp/iptables-rules-1655374830977350058.txt3695617169
2022-06-16T10:20:30.991861Z	info	Writing following contents to rules file: /tmp/ip6tables-rules-1655374830991789955.txt3236266915

2022-06-16T10:20:30.991913Z	info	Running command: ip6tables-restore --noflush /tmp/ip6tables-rules-1655374830991789955.txt3236266915
2022-06-16T10:20:31.000566Z	info	Running command: iptables-save 
2022-06-16T10:20:31.010543Z	info	Command output: 
# Generated by iptables-save v1.4.21 on Thu Jun 16 10:20:31 2022
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:ISTIO_INBOUND - [0:0]
:ISTIO_IN_REDIRECT - [0:0]
:ISTIO_OUTPUT - [0:0]
:ISTIO_REDIRECT - [0:0]
-A PREROUTING -p tcp -j ISTIO_INBOUND
-A OUTPUT -p tcp -j ISTIO_OUTPUT
-A ISTIO_INBOUND -p tcp -m tcp --dport 15008 -j RETURN
-A ISTIO_INBOUND -p tcp -m tcp --dport 15090 -j RETURN
-A ISTIO_INBOUND -p tcp -m tcp --dport 15021 -j RETURN
-A ISTIO_INBOUND -p tcp -m tcp --dport 8080 -j RETURN
-A ISTIO_INBOUND -p tcp -m tcp --dport 15020 -j RETURN
-A ISTIO_INBOUND -p tcp -j ISTIO_IN_REDIRECT
-A ISTIO_IN_REDIRECT -p tcp -j REDIRECT --to-ports 15006
-A ISTIO_OUTPUT -s REDACTED-IP4-ADDRESS/32 -o lo -j RETURN
-A ISTIO_OUTPUT ! -d REDACTED-IP4-ADDRESS/32 -o lo -m owner --uid-owner 1337 -j ISTIO_IN_REDIRECT
-A ISTIO_OUTPUT -o lo -m owner ! --uid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -m owner --uid-owner 1337 -j RETURN
-A ISTIO_OUTPUT ! -d REDACTED-IP4-ADDRESS/32 -o lo -m owner --gid-owner 1337 -j ISTIO_IN_REDIRECT
-A ISTIO_OUTPUT -o lo -m owner ! --gid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -m owner --gid-owner 1337 -j RETURN
-A ISTIO_OUTPUT -d REDACTED-IP4-ADDRESS/32 -j RETURN
-A ISTIO_OUTPUT -j ISTIO_REDIRECT
-A ISTIO_REDIRECT -p tcp -j REDIRECT --to-ports 15001
COMMIT
# Completed on Thu Jun 16 10:20:31 2022

==== END logs for container istio-init of pod ingress-nginx/ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b8tmd5m ====
==== START logs for container ingress-nginx-default-backend of pod ingress-nginx/ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b8tmd5m ====
==== END logs for container ingress-nginx-default-backend of pod ingress-nginx/ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b8tmd5m ====
==== START logs for container istio-proxy of pod ingress-nginx/ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b8tmd5m ====
2022-06-16T10:20:38.055851Z	info	FLAG: --concurrency="2"
2022-06-16T10:20:38.055887Z	info	FLAG: --domain="ingress-nginx.svc.cluster.local"
2022-06-16T10:20:38.055894Z	info	FLAG: --help="false"
2022-06-16T10:20:38.055898Z	info	FLAG: --log_as_json="false"
2022-06-16T10:20:38.055902Z	info	FLAG: --log_caller=""
2022-06-16T10:20:38.055906Z	info	FLAG: --log_output_level="default:info"
2022-06-16T10:20:38.055910Z	info	FLAG: --log_rotate=""
2022-06-16T10:20:38.055914Z	info	FLAG: --log_rotate_max_age="30"
2022-06-16T10:20:38.055918Z	info	FLAG: --log_rotate_max_backups="1000"
2022-06-16T10:20:38.055922Z	info	FLAG: --log_rotate_max_size="104857600"
2022-06-16T10:20:38.055926Z	info	FLAG: --log_stacktrace_level="default:none"
2022-06-16T10:20:38.055933Z	info	FLAG: --log_target="[stdout]"
2022-06-16T10:20:38.055937Z	info	FLAG: --meshConfig="./etc/istio/config/mesh"
2022-06-16T10:20:38.055941Z	info	FLAG: --outlierLogPath=""
2022-06-16T10:20:38.055945Z	info	FLAG: --proxyComponentLogLevel="misc:error"
2022-06-16T10:20:38.055948Z	info	FLAG: --proxyLogLevel="warning"
2022-06-16T10:20:38.055952Z	info	FLAG: --serviceCluster="istio-proxy"
2022-06-16T10:20:38.055956Z	info	FLAG: --stsPort="0"
2022-06-16T10:20:38.055959Z	info	FLAG: --templateFile=""
2022-06-16T10:20:38.055963Z	info	FLAG: --tokenManagerPlugin="GoogleTokenExchange"
2022-06-16T10:20:38.055968Z	info	FLAG: --vklog="0"
2022-06-16T10:20:38.055974Z	info	Version 1.13.2-f84f69d1028e874d568f2942c5bab5271fcdeda7-Clean
2022-06-16T10:20:38.056255Z	info	Proxy role	ips=[REDACTED-IP4-ADDRESS fe80::84fb:2dff:febe:816f] type=sidecar id=ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b8tmd5m.ingress-nginx domain=ingress-nginx.svc.cluster.local
2022-06-16T10:20:38.056344Z	info	Apply proxy config from env {}

2022-06-16T10:20:38.057706Z	info	Effective config: binaryPath: /usr/local/bin/envoy
concurrency: 2
configPath: ./etc/istio/proxy
controlPlaneAuthPolicy: MUTUAL_TLS
discoveryAddress: istiod.istio-system.svc:15012
drainDuration: 45s
parentShutdownDuration: 60s
proxyAdminPort: 15000
serviceCluster: istio-proxy
statNameLength: 189
statusPort: 15020
terminationDrainDuration: 5s
tracing:
  zipkin:
    address: zipkin.istio-system:9411

2022-06-16T10:20:38.057736Z	info	JWT policy is third-party-jwt
2022-06-16T10:20:38.081025Z	info	CA Endpoint istiod.istio-system.svc:15012, provider Citadel
2022-06-16T10:20:38.081083Z	info	Using CA istiod.istio-system.svc:15012 cert with certs: var/run/secrets/istio/root-cert.pem
2022-06-16T10:20:38.081102Z	info	Opening status port 15020
2022-06-16T10:20:38.081206Z	info	citadelclient	Citadel client using custom root cert: var/run/secrets/istio/root-cert.pem
2022-06-16T10:20:38.102489Z	info	ads	All caches have been synced up in 57.073125ms, marking server ready
2022-06-16T10:20:38.103161Z	info	sds	SDS server for workload certificates started, listening on "etc/istio/proxy/SDS"
2022-06-16T10:20:38.103197Z	info	xdsproxy	Initializing with upstream address "istiod.istio-system.svc:15012" and cluster "Kubernetes"
2022-06-16T10:20:38.103267Z	info	sds	Starting SDS grpc server
2022-06-16T10:20:38.104472Z	info	starting Http service at REDACTED-IP4-ADDRESS:15004
2022-06-16T10:20:38.105203Z	info	Pilot SAN: [istiod.istio-system.svc]
2022-06-16T10:20:38.107512Z	info	Starting proxy agent
2022-06-16T10:20:38.107578Z	info	Epoch 0 starting
2022-06-16T10:20:38.107622Z	info	Envoy command: [-c etc/istio/proxy/envoy-rev0.json --restart-epoch 0 --drain-time-s 45 --drain-strategy immediate --parent-shutdown-time-s 60 --local-address-ip-version v4 --file-flush-interval-msec 1000 --disable-hot-restart --log-format %Y-%m-%dT%T.%fZ	%l	envoy %n	%v -l warning --component-log-level misc:error --concurrency 2]
2022-06-16T10:20:38.472780Z	info	cache	generated new workload certificate	latency=369.888934ms ttl=23h59m59.527238582s
2022-06-16T10:20:38.472830Z	info	cache	Root cert has changed, start rotating root cert
2022-06-16T10:20:38.472857Z	info	ads	XDS: Incremental Pushing:0 ConnectedEndpoints:0 Version:
2022-06-16T10:20:38.472941Z	info	cache	returned workload trust anchor from cache	ttl=23h59m59.5270632s
2022-06-16T10:20:38.868690Z	info	xdsproxy	connected to upstream XDS server: istiod.istio-system.svc:15012
2022-06-16T10:20:39.181314Z	info	ads	ADS: new connection for node:ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b8tmd5m.ingress-nginx-1
2022-06-16T10:20:39.181459Z	info	cache	returned workload trust anchor from cache	ttl=23h59m58.818548035s
2022-06-16T10:20:39.181881Z	info	ads	SDS: PUSH request for node:ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b8tmd5m.ingress-nginx resources:1 size:2.0kB resource:ROOTCA
2022-06-16T10:20:39.222019Z	info	ads	ADS: new connection for node:ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b8tmd5m.ingress-nginx-2
2022-06-16T10:20:39.222152Z	info	cache	returned workload certificate from cache	ttl=23h59m58.777856178s
2022-06-16T10:20:39.222359Z	info	ads	SDS: PUSH request for node:ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b8tmd5m.ingress-nginx resources:1 size:9.2kB resource:default
2022-06-16T10:20:40.679756Z	info	Readiness succeeded in 2.632886417s
2022-06-16T10:20:40.680356Z	info	Envoy proxy is ready
==== END logs for container istio-proxy of pod ingress-nginx/ingress-controller-ingress-nginx-defaultbackend-56c5fbc6b8tmd5m ====
